feat: statistical test is added

--- a/src/notebooks/compare_countries.ipynb
+++ b/src/notebooks/compare_countries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "e8c7318e",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,8 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy import stats\n"
+    "from scipy.stats import f_oneway, kruskal\n",
+    "\n"
    ]
   },
   {
@@ -293,9 +294,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11791a42",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6397234c",
+   "metadata": {},
+   "source": [
+    "# Statistical Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "684ed9d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def statistical_tests(df: pd.DataFrame, metric: str, method: str = 'anova'):\n",
+    "    \"\"\"statistical test (ANOVA or Kruskal-Wallis) on a metric across countries.\"\"\"\n",
+    "    region_groups = [group[metric].dropna() for name, group in df.groupby('Region')]\n",
+    "    \n",
+    "    if method == 'anova':\n",
+    "        stat, p_value = f_oneway(*region_groups)\n",
+    "        print(f\"One-way ANOVA for {metric}: F = {stat:.3f}, p = {p_value:.4f}\")\n",
+    "    elif method == 'kruskal':\n",
+    "        stat, p_value = kruskal(*region_groups)\n",
+    "        print(f\"Kruskal–Wallis test for {metric}: H = {stat:.3f}, p = {p_value:.4f}\")\n",
+    "    else:\n",
+    "        raise ValueError(\"Method must be 'anova' or 'kruskal'\")\n",
+    "    \n",
+    "    if p_value < 0.05:\n",
+    "        print(\"Result: Statistically significant difference between regions.\\n\")\n",
+    "    else:\n",
+    "        print(\"Result: No statistically significant difference between regions.\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "9c7bfad8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔬 One-way ANOVA for GHI: F = 2782.622, p = 0.0000\n",
+      "📌 Result: Statistically significant difference between regions.\n",
+      "\n",
+      "🔬 One-way ANOVA for GHI: F = 2782.622, p = 0.0000\n",
+      "📌 Result: Statistically significant difference between regions.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "statistical_tests(df_all, 'GHI', method='anova')\n",
+    "statistical_tests(df_all, 'GHI')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c07a488",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab95c1de",
+   "id": "05657fc0",
    "metadata": {},
    "outputs": [],
    "source": []
