feat: Key Observations is added

--- a/src/notebooks/compare_countries.ipynb
+++ b/src/notebooks/compare_countries.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "684ed9d9",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "9c7bfad8",
    "metadata": {},
    "outputs": [
@@ -344,25 +344,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔬 One-way ANOVA for GHI: F = 2782.622, p = 0.0000\n",
-      "📌 Result: Statistically significant difference between regions.\n",
+      "One-way ANOVA for GHI: F = 2782.622, p = 0.0000\n",
+      "Result: Statistically significant difference between regions.\n",
       "\n",
-      "🔬 One-way ANOVA for GHI: F = 2782.622, p = 0.0000\n",
-      "📌 Result: Statistically significant difference between regions.\n",
+      "Kruskal–Wallis test for GHI: H = 5142.448, p = 0.0000\n",
+      "Result: Statistically significant difference between regions.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "statistical_tests(df_all, 'GHI', method='anova')\n",
-    "statistical_tests(df_all, 'GHI')"
+    "statistical_tests(df_all, 'GHI')\n",
+    "statistical_tests(df_all, 'GHI', method='kruskal')"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "2c07a488",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Key Observations\n",
+    "- Benin shows the highest overall solar potential (GHI and DNI), but also has the most variability.\n",
+    "\n",
+    "- Togo has moderate potential with slightly more stable DHI values.\n",
+    "\n",
+    "- Sierra Leone appears to have the least solar potential, and some unusual median values suggest possible data quality issues."
+   ]
   },
   {
    "cell_type": "code",
